--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
       "ecmaVersion": 12
   },
   "rules": {
-      "linebreak-style": ["error", "windows"]
+      "linebreak-style": ["error", "windows"],
+      "no-console": "off"
   }
 }
