--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "lint": "./node_modules/.bin/eslint ./",
-    "forceSync": "node ./scripts/forceSync"
+    "forceSync": "node ./scripts/forceSync",
+    "generateMirgationSkeleton": "npx sequelize-cli migration:generate --name migration-skeleton"
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +17,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^8.5.1",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
     "eslint": "^7.13.0",
